extends ColorRect




func _on_close_pressed() -> void:
	queue_free()


func _on_mine_radius_pressed() -> void:
	pass


func _on_drone_speed_pressed() -> void:
	pass # Replace with function body.


func _on_drone_add_pressed() -> void:
	pass # Replace with function body.


func _on_drill_add_pressed() -> void:
	pass # Replace with function body.


func _on_battery_speed_pressed() -> void:
	pass # Replace with function body.


func _on_call_it_in_pressed() -> void:
	pass # Replace with function body.


func _on_battery_plus_pressed() -> void:
	pass # Replace with function body.


func _on_mark_pressed() -> void:
	pass # Replace with function body.


func _on_steel_heart_pressed() -> void:
	pass # Replace with function body.


func _on_drill_speed_pressed() -> void:
	pass # Replace with function body.


func _on_drill_size_pressed() -> void:
	pass # Replace with function body.


func _on_scan_size_pressed() -> void:
	pass # Replace with function body.


func _on_click_mult_pressed() -> void:
	pass # Replace with function body.


func _on_drill_dur_pressed() -> void:
	pass # Replace with function body.
